[package]
name = "actix-multipart"
version = "0.7.2"
authors = [
    "Nikolay Kim <fafhrd91@gmail.com>",
    "Jacob Halsey <jacob@jhalsey.com>",
    "Rob Ede <robjtede@icloud.com>",
]
description = "Multipart request & form support for Actix Web"
keywords = ["http", "actix", "web", "multipart", "form"]
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[package.metadata.cargo_check_external_types]
allowed_external_types = [
    "actix_http::*",
    "actix_multipart_derive::*",
    "actix_utils::*",
    "actix_web::*",
    "bytes::*",
    "futures_core::*",
    "mime::*",
    "serde_json::*",
    "serde_plain::*",
    "serde::*",
    "tempfile::*",
]

[features]
default = ["tempfile", "derive"]
derive = ["actix-multipart-derive"]
tempfile = ["dep:tempfile", "tokio/fs"]

[dependencies]
actix-multipart-derive = { version = "=0.7.0", optional = true }
actix-utils = "3"
actix-web = { version = "4", default-features = false }

derive_more = { version = "2", features = ["display", "error", "from"] }
futures-core = { version = "0.3.17", default-features = false, features = ["alloc"] }
futures-util = { version = "0.3.17", default-features = false, features = ["alloc"] }
httparse = "1.3"
local-waker = "0.1"
log = "0.4"
memchr = "2.5"
mime = "0.3"
rand = "0.9"
serde = "1"
serde_json = "1"
serde_plain = "1"
tempfile = { version = "3.4", optional = true }
tokio = { version = "1.24.2", features = ["sync", "io-util"] }

[dev-dependencies]
actix-http = "3"
actix-multipart-rfc7578 = "0.11"
actix-rt = "2.2"
actix-test = "0.1"
actix-web = "4"
assert_matches = "1"
awc = "3"
env_logger = "0.11"
futures-util = { version = "0.3.17", default-features = false, features = ["alloc"] }
futures-test = "0.3"
multer = "3"
tokio = { version = "1.24.2", features = ["sync"] }
tokio-stream = "0.1"

[lints]
workspace = true
