[package]
name = "actix-router"
version = "0.5.1"
authors = [
    "Nikolay Kim <fafhrd91@gmail.com>",
    "Ali MJ Al-Nasrawy <alimjalnasrawy@gmail.com>",
    "Rob Ede <robjtede@icloud.com>",
]
description = "Resource path matching and router"
keywords = ["actix", "router", "routing"]
repository = "https://github.com/actix/actix-web.git"
license = "MIT OR Apache-2.0"
edition = "2021"

[package.metadata.cargo_check_external_types]
allowed_external_types = [
    "http::*",
    "serde::*",
]

[features]
default = ["http"]

[dependencies]
bytestring = ">=0.1.5, <2"
http = { version = "0.2.7", optional = true }
regex = "1.5"
serde = "1"
tracing = { version = "0.1.30", default-features = false, features = ["log"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
http = "0.2.7"
serde = { version = "1", features = ["derive"] }
percent-encoding = "2.1"

[[bench]]
name = "router"
harness = false

[[bench]]
name = "quoter"
harness = false
