[package]
name = "actix-session"
version = "0.3.0-alpha.2"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
description = "Session for actix web framework."
readme = "README.md"
keywords = ["http", "web", "framework", "async", "futures"]
homepage = "https://actix.rs"
repository = "https://github.com/actix/actix-web.git"
documentation = "https://docs.rs/actix-session/"
license = "MIT/Apache-2.0"
exclude = [".gitignore", ".travis.yml", ".cargo/config", "appveyor.yml"]
workspace = ".."
edition = "2018"

[lib]
name = "actix_session"
path = "src/lib.rs"

[features]
default = ["cookie-session"]

# sessions feature, session require "ring" crate and c compiler
cookie-session = ["actix-web/secure-cookies"]

[dependencies]
actix-web = "2.0.0-alpha.2"
actix-service = "1.0.0-alpha.2"
bytes = "0.4"
derive_more = "0.99.2"
futures = "0.3.1"
hashbrown = "0.6.3"
serde = "1.0"
serde_json = "1.0"
time = "0.1.42"

[dev-dependencies]
actix-rt = "1.0.0-alpha.2"
