[package]
name = "actix-test-server"
version = "0.1.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
description = "Actix test server"
keywords = ["network", "framework", "async", "futures"]
homepage = "https://actix.rs"
repository = "https://github.com/actix/actix-net.git"
documentation = "https://docs.rs/actix-test-server/"
categories = ["network-programming", "asynchronous"]
license = "MIT/Apache-2.0"
exclude = [".gitignore", ".travis.yml", ".cargo/config", "appveyor.yml"]
edition = "2018"
workspace = "../"

[package.metadata.docs.rs]
features = ["ssl", "tls", "rust-tls"]

[lib]
name = "actix_test_server"
path = "src/lib.rs"

[features]
default = []

# tls
tls = ["native-tls", "actix-server/tls"]

# openssl
ssl = ["openssl", "actix-server/ssl"]

# rustls
rust-tls = ["rustls", "tokio-rustls", "webpki", "webpki-roots"]

[dependencies]
actix-rt = "0.1.0"
actix-server = "0.1.0"

log = "0.4"

# io
net2 = "0.2"
futures = "0.1"
tokio-tcp = "0.1"
tokio-reactor = "0.1"

# native-tls
native-tls = { version="0.2", optional = true }

# openssl
openssl = { version="0.10", optional = true }

#rustls
rustls = { version = "^0.14", optional = true }
tokio-rustls = { version = "^0.8", optional = true }
webpki = { version = "0.18", optional = true }
webpki-roots = { version = "0.15", optional = true }
