[package]
name = "actix-web-actors"
version = "4.1.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
description = "Actix actors support for Actix Web"
keywords = ["actix", "http", "web", "framework", "async"]
homepage = "https://actix.rs"
repository = "https://github.com/actix/actix-web"
license = "MIT OR Apache-2.0"
edition = "2018"

[lib]
name = "actix_web_actors"
path = "src/lib.rs"

[dependencies]
actix = { version = ">=0.12, <0.14", default-features = false }
actix-codec = "0.5"
actix-http = "3"
actix-web = { version = "4", default-features = false }

bytes = "1"
bytestring = "1"
futures-core = { version = "0.3.7", default-features = false }
pin-project-lite = "0.2"
tokio = { version = "1.13.1", features = ["sync"] }

[dev-dependencies]
actix-rt = "2.2"
actix-test = "0.1.0-beta.13"
awc = { version = "3", default-features = false }

env_logger = "0.9"
futures-util = { version = "0.3.7", default-features = false }
